--- a/store-app/src/layouts/BaseLayout.astro
+++ b/store-app/src/layouts/BaseLayout.astro
@@ -10,8 +10,21 @@ const {title = 'Solid store'} = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <title>{title}</title>
-    <!-- load styles from src/styles/utils.css using Astro.resolve() -->
-    <link rel="stylesheet" type="text/css" href={Astro.resolve('../styles/base.css')} />
+    <style>
+     * {
+        box-sizing: border-box;
+      }
+      html,
+      body {
+        font-family: 'Segoe UI', system-ui;
+        margin: 0;
+      }
+      body {
+        padding: 0;
+        margin: 0;
+        min-height: 100vh;
+      }
+    </style>
   </head>
   <body>
     <Header />
