--- a/store-app/src/pages/index.astro
+++ b/store-app/src/pages/index.astro
@@ -4,7 +4,7 @@ import BaseLayout from 'layouts:BaseLayout';
 ---
 
 <BaseLayout>
-  <Counter client:visible>
+  <Counter client:idle>
     <h1>Hello, Solid!</h1>
   </Counter>
 </BaseLayout>
