--- a/store-app/src/layouts/BaseLayout.astro
+++ b/store-app/src/layouts/BaseLayout.astro
@@ -10,21 +10,6 @@ const {title = 'Solid store'} = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <title>{title}</title>
-    <style>
-     * {
-        box-sizing: border-box;
-      }
-      html,
-      body {
-        font-family: 'Segoe UI', system-ui;
-        margin: 0;
-      }
-      body {
-        padding: 0;
-        margin: 0;
-        min-height: 100vh;
-      }
-    </style>
   </head>
   <body>
     <Header />
@@ -33,3 +18,20 @@ const {title = 'Solid store'} = Astro.props;
     </main>
   </body>
 </html>
+
+
+<style global>
+  * {
+    box-sizing: border-box;
+  }
+  html,
+  body {
+    font-family: 'Segoe UI', system-ui;
+    margin: 0;
+  }
+  body {
+    padding: 0;
+    margin: 0;
+    min-height: 100vh;
+  }
+</style>
