--- a/store-app/src/lib/Counter/style.css
+++ b/store-app/src/lib/Counter/style.css
@@ -2,10 +2,9 @@
   display: grid;
   font-size: 2em;
   grid-template-columns: repeat(3, minmax(0, 1fr));
-  margin-top: 3em;
   place-items: center;
 }
 
-.counter-message {
+.counterMessage {
   text-align: center;
 }
