--- a/store-app/src/pages/product.astro
+++ b/store-app/src/pages/product.astro
@@ -1,7 +1,8 @@
 ---
 import ProductLayout from 'layouts:ProductLayout';
+import ProductImage from 'components:ProductImage';
 ---
 
 <ProductLayout>
-  agfwagw
+  <ProductImage />
 </ProductLayout>
