--- a/store-app/src/components/Header.astro
+++ b/store-app/src/components/Header.astro
@@ -1,1 +1,19 @@
-<header>Solid Store</header>
+<header>
+  <h2>Solid Store</h2>
+</header>
+
+<style lang="scss">
+header {
+  background-color: var(--color-bg-dark);
+  color: var(--color-font-light);
+  height: 60px;
+  padding: 0 24px;
+  display: flex;
+  align-items: center;
+}
+
+h2 {
+  font-weight: 600;
+  font-size: 1.2rem;
+}
+</style>
