Items renamed to Catalog

--- a/store-app/src/pages/index.astro
+++ b/store-app/src/pages/index.astro
@@ -1,13 +1,13 @@
 ---
 import BaseLayout from 'layouts:BaseLayout';
-import ItemsLoader from 'lib:ItemsLoader';
+import CatalogLoader from 'lib:CatalogLoader';
 ---
 
 <BaseLayout>
   <h1>Store items</h1>
 
   <section>
-    <ItemsLoader client:idle/>
+    <CatalogLoader client:idle/>
   </section>
 </BaseLayout>
 
