Background color changed

--- a/store-app/src/components/Header.astro
+++ b/store-app/src/components/Header.astro
@@ -4,12 +4,11 @@
 
 <style lang="scss">
 header {
-  background-color: var(--color-bg-dark);
-  color: var(--color-font-light);
   height: 60px;
   padding: 0 24px;
   display: flex;
   align-items: center;
+  box-shadow: var(--shadow-elevation-medium);
 }
 
 h2 {
