--- a/store-app/src/lib/ProductTile/style.scss
+++ b/store-app/src/lib/ProductTile/style.scss
@@ -28,7 +28,7 @@
   height: 410px;
   display: flex;
   padding: 8px;
-  background-color: var(--color-backdrop-ight);
+  background-color: var(--color-backdrop-light);
 }
 
 .name {
