--- a/store-app/src/styles/_variables.scss
+++ b/store-app/src/styles/_variables.scss
@@ -3,7 +3,7 @@
   --color-bg: #f5d6ba;
   --color-bg-dark: #2c2c54;
   --color-backdrop: #acc3a6;
-  --color-backdrop-ight: #fff;
+  --color-backdrop-light: #fff;
 
   --color-font-light: #fff;
   --color-font-dark: #000;
