--- a/store-app/src/layouts/BaseLayout.astro
+++ b/store-app/src/layouts/BaseLayout.astro
@@ -25,7 +25,7 @@ const {title = 'Solid store'} = Astro.props;
 
 <style lang="scss">
   main {
-    padding: 48px 24px;
+    padding: 24px;
     height: calc(100vh - 60px);
     overflow: auto;
   }
