Products page added

--- a/store-app/src/pages/product.astro
+++ b/store-app/src/pages/product.astro
@@ -1,8 +1,10 @@
 ---
 import ProductLayout from 'layouts:ProductLayout';
 import ProductImage from 'components:ProductImage';
+import ProductInfo from 'components:ProductInfo';
 ---
 
 <ProductLayout>
   <ProductImage />
+  <ProductInfo />
 </ProductLayout>
