--- a/store-app-svelte/src/styles/base.scss
+++ b/store-app-svelte/src/styles/base.scss
@@ -16,3 +16,20 @@ body {
   color: var(--color-font-dark);
   background-color: var(--color-bg);
 }
+
+h1 {
+  font-size: 2rem;
+  margin-bottom: 0;
+
+  @media (min-width: 900px) {
+    font-size: 3rem;
+  }
+}
+
+p {
+  font-size: 1.3rem;
+
+  @media (min-width: 900px) {
+    max-width: 500px;
+  }
+}
