Product layout fixed

--- a/store-app-svelte/src/pages/product.astro
+++ b/store-app-svelte/src/pages/product.astro
@@ -1,7 +1,7 @@
 ---
 import MainLayout from 'layouts:MainLayout';
-import ProductInfo from 'components:ProductInfo';
+import ProductInfo from 'lib:ProductInfo';
 ---
 <MainLayout>
-	<ProductInfo />
+	<ProductInfo client:idle />
 </MainLayout>
