--- a/store-app-svelte/src/components/Header.astro
+++ b/store-app-svelte/src/components/Header.astro
@@ -1,5 +1,15 @@
+---
+import IconButtonLink from 'lib:IconButtonLink';
+---
+
 <header>
-  <h2>Solid Store</h2>
+  <h2><a href="/">Solid Store</a></h2>
+
+  <div class="right-hand-content">
+    <IconButtonLink href="/account" alt="account">
+      <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+    </IconButtonLink>
+  </div>
 </header>
 
 <style lang="scss">
@@ -9,10 +19,18 @@
     display: flex;
     align-items: center;
     box-shadow: var(--shadow-elevation-medium);
+    justify-content: space-between;
   }
 
   h2 {
     font-weight: 600;
     font-size: 1.2rem;
+    margin: 0;
+
+    a {
+      display: block;
+      color: inherit;
+      text-decoration: none;
+    }
   }
 </style>
