Add button added

--- a/store-app-svelte/src/pages/account.astro
+++ b/store-app-svelte/src/pages/account.astro
@@ -1,7 +1,7 @@
 ---
 import SubPageLayout from 'layouts:SubPageLayout';
 
-const crumbs = [{name: 'Account', path: '/account'}];
+const crumbs = [{name: 'Account'}];
 ---
 <SubPageLayout crumbs={crumbs} title="Account">
   <h1>Hello user!</h1>
